--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="ui__texts">
         <h1 class="text text--title">
           <span>rubik's cube</span>
-          <span>by Chairil Ali</span>
+<!--           <span>by Chairil Ali</span> -->
         </h1>
         <div class="text text--note">2x tab untuk gass!!!</div>
         <div class="text text--timer">0:00</div>
